SERVER-49009 SetShardVersion must not call forceShardFilteringMetadataRefresh